[package]
name = "cell_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = "0.27.5"
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
wgpu = "0.14.2"
bytemuck = { version = "1.4", features = ["derive"]}
anyhow = "1.0"
rand = "0.8.5"
async-executor = "1.4.1"
ex = "0.1.3"
imgui = "0.9"
imgui-winit-support = { version = "0.9"  }
imgui-wgpu = "0.21.0"
cgmath = "0.18"
tensor-wgpu =  { git = "https://github.com/javirk/tensor-wgpu", tag = "0.1.3"}
ndarray = "0.15.6"

[patch.crates-io]
naga = { git = "https://github.com/gfx-rs/naga.git", rev = "e98bd9264c3a6b04dff15a6b1213c0c80201740a" }  # For atomicCompareExchangeWeak

[workspace]
resolver = "2"