[package]
name = "cell_simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulation"
path = "src/lib.rs"

[[easy]]
name = "easy"
path = "examples/2d_app.rs"

[[no_window]]
name = "no_window"
path = "examples/no_window.rs"

[[3d]]
name = "3d"
path = "examples/3d_app.rs"

[[json_app]]
name = "json_app"
path = "examples/json_app.rs"

[dependencies]
cfg-if = "1"
winit = "0.27.5"
env_logger = "0.9"
pollster = "0.2.5"
wgpu = "0.14.2"
bytemuck = { version = "1.4", features = ["derive"]}
anyhow = "1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
async-executor = "1.4.1"
ex = "0.1.3"
cgmath = "0.18"
tensor-wgpu =  { git = "https://github.com/javirk/tensor-wgpu", rev = "aced60555a6336d66daa1070022e64d55edbf322"}
ndarray = "0.15.6"
futures = "0.3.26"
futures-intrusive = "0.4"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
csv = "1.2.0"
imgui = "0.9"
imgui-winit-support = { version = "0.9" }
imgui-wgpu = "0.21.0"

[patch.crates-io]
naga = { git = "https://github.com/gfx-rs/naga.git", rev = "e98bd9264c3a6b04dff15a6b1213c0c80201740a" }  # For atomicCompareExchangeWeak

[workspace]
resolver = "2"

[features]
debug-print = []